sample-app/deployment-acm-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: acm-example
  name: acm-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acm-example
  template:
    metadata:
      labels:
        app: acm-example
    spec:
      containers:
      - name: example-php-docker-helloworld
        image: quay.io/appuio/example-php-docker-helloworld
        imagePullPolicy: Always
