sample-app/service-acm-example.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: acm-example
  name: acm-example
spec:
  type: ClusterIP
  selector:
    app: acm-example
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
