sample-app/route-acm-example.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: acm-example
  name: acm-example
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: acm-example
